# mapartcalc

./: .gitignore  Cargo.toml  LICENSE  derivation.nix  flake.nix
src/: dye.rs  main.rs
