[package]
name = "mapartcalc"
description = "Simple tool to calculate required raw items for maparts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
csv = "1.3.0"
itertools = "0.13.0"
owo-colors = "4.0.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0", features = ["derive"] }


[profile.release]
strip = true
lto = "thin"
